# tyora

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main_func.py  moocfi_cses.py  pyproject.toml  requirements.txt  test_moocfi_cses.py  tyora.py
.github/workflows/: ci.yml  test.yml
src/tyora/: __init__.py  __main__.py  tyora.py
stubs/: htmlement.pyi
tests/: test_client.py  test_moocfi_cses.py  test_session.py  test_tyora.py  test_utils.py
tests/test_data/: session_logged_in_some_tasks_done.html  submit_3055_form.html  task_3052_incomplete_no_submit_link.html  task_3055_complete.html
tyora/: client.py  session.py  tyora.py  utils.py
