[project]
name = "tyora"
version = "0.1.0"
description = "CLI to interact with the mooc.fi instance of CSES"
authors = [
    { name = "Edwin Hermans", email = "edwin@madtech.cx" }
]
dependencies = [
    "html2text>=2024.2.26",
    "htmlement>=2.0.0",
    "requests>=2.32.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"tyora" = "tyora:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "requests-mock>=1.12.1",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tyora"]

[tool.pytest.ini_options]
addopts = "--cov"
